--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: colum;
+    
+}
+.hola{
+
+    display: flex;
 }
 
 .initial-info .initial-info-div{
@@ -14,7 +19,23 @@
     display: block;
     position: relative;
     width: 80%;
-    height: 17rem;
+    height: 30rem;
     background-color: #3b70c4;
     border-radius: 0 0 15px 15px ;
 }
+
+h1{
+    margin-left: 20px;
+    font-family:'Rubik', sans-serif;
+    font-style: italic;
+}
+
+.principal-img{
+    margin-top: 30px;
+    width: 150px;
+    display: flex;
+    min-width: 250px;
+    height: fit-content;
+    margin-left: 20px;
+}
+
