--- a/styles/index.css
+++ b/styles/index.css
@@ -104,11 +104,7 @@ h3{
     font-size: 20px;
 }
 
-p{
-    font-family: var(--word-font);
-    text-align: center;
-    font-size: 20px;
-}
+
 
 .btn-more{
     width: 90px;
@@ -138,27 +134,41 @@ p{
     top: -2px
 }
 
-.logramos-tittle{
-    text-align: center;
-    font-size: 40px;
-    text-decoration:underline;
-    font-style: italic;
 
-}
  .logramos-text{
     text-align: center;
     font-size: 27px;
-    margin: 30px 70px 0px 70px;
+    margin: 70px 70px 60px 70px;
 }
 
-.logo-banco{
+.link-banco{
     display: flex;
-    width: 180px;
-    height: 180px;
+    width: 160px;
+    height: 160px;
     align-items: center;
     justify-content: center;
-    border:3px solid black;
     border-radius: 50%;
+    margin-bottom: 20px;
+    margin-left: 30pc;
+    box-shadow: 0 4px 12px black;
+}
+
+.link-uni{
+    position: absolute;
+    width: 160px;
+    height: 160px;
+    align-items: center;
+    justify-content: center;
+    border:1px solid black;
+    border-radius: 50%;
+    margin-left: 56pc;
+    margin-top: -11pc;
+    box-shadow: 0 4px 12px black;
+}
+.contact-text{
+    text-align: center;
+    font-size: 27px;
+    margin: 70px 70px 60px 70px;
 }
 
 /*
