--- a/styles/index.css
+++ b/styles/index.css
@@ -37,6 +37,8 @@ h1{
     margin-left: 20px;
     font-family:'Rubik', sans-serif;
     font-style: italic;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .initial-text{
