--- a/styles/basic.css
+++ b/styles/basic.css
@@ -100,6 +100,31 @@ h2{
     font-style: italic;
 
 }
+
+footer{
+    width: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    padding: 2rem 6%;
+    background-color: var(--header-color);
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-link-banco, .footer-link-uni{
+    height: 100px;
+    margin-bottom: 1rem;
+    border-radius: 50%;
+}
+
+.social-icon-container, .footer-menu-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
 /*
 @media(max-width:950px){
 
