--- a/styles/index.css
+++ b/styles/index.css
@@ -46,10 +46,11 @@ h1{
     width: 500px;
     height: 200px;
     font-family: var(--word-font);
-    position: absolute;
-    bottom: 300px;
+    position:relative;
+    bottom: 200px;
     left: calc(50% - 200px);
     font-size: 20px;
+    
 }
 .principal-img{
     margin-top: 30px;
