--- a/styles/basic.css
+++ b/styles/basic.css
@@ -64,7 +64,7 @@
 .menu li::after{
     content: "";
     background-color: brown/*#D90D32*/;
-    position: absolute;
+    position:absolute;
     top: 60%;
     width: 6%;
     height: 3px;
@@ -106,7 +106,7 @@ footer{
     position: relative;
     bottom: 0;
     left: 0;
-    padding: 2rem 6%;
+    padding: 1rem 6%;
     background-color: var(--header-color);
     display: flex;
     flex-direction: column;
@@ -123,8 +123,33 @@ footer{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-
 }
+
+.siguenos-text{
+    position: relative;
+    bottom: 250px;
+    color: white;
+    left: 30pc;
+    font-family: var(--word-font);
+}
+
+.social-icon-fb{
+    width: 75px;
+    border-radius: 50px;
+    filter: invert(100%);
+    position: relative;
+    left: 78%;
+    bottom: 250px;
+}
+.social-icon-ig{
+    width: 75px;
+    border-radius: 50px;
+    filter: invert(100%);
+    position: relative;
+    left: 78%;
+    bottom: 250px;
+}
+
 /*
 @media(max-width:950px){
 
