--- a/styles/basic.css
+++ b/styles/basic.css
@@ -83,6 +83,13 @@
 }
 
 /*textos*/
+h1{
+    margin-left: 20px;
+    font-family:'Rubik', sans-serif;
+    font-style: italic;
+    text-align: center;
+    text-transform: uppercase;
+}
 
 p{
     font-family: var(--word-font);
@@ -93,13 +100,14 @@ p{
 
 
 h2{
-    text-align: center;
     font-size: 40px;
     font-family: var(--word-font);
     text-decoration:underline;
     font-style: italic;
-
 }
+
+/*footer*/
+
 footer{
     width: 100%;
     height: 400px;
