--- a/styles/index.css
+++ b/styles/index.css
@@ -188,7 +188,18 @@ h3{
     align-items: center;
     justify-content: center;
 }
-
+.btn-wst{
+    width: 8%;
+    margin-left: 32%;
+    border-radius: 50%;
+    box-shadow: 0 4px 12px black;
+}
+.btn-mail{
+    width: 7%;
+    margin-left: 18%;
+    border-radius: 50%;
+    box-shadow: 0 4px 12px black;
+}
 
 
 /*
