--- a/styles/pag1.css
+++ b/styles/pag1.css
@@ -43,7 +43,8 @@
 .principal-img-1{
     margin-top: 6%;
     display: flex;
-    width:27%;
+    width:34%;
+    margin-bottom: 50px;
 }
 .contact-tittle{
     text-align: center;
