--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,9 @@
 
     display: flex;
 }
+body{
+    margin: 0;
+}
 
 .initial-info .initial-info-div{
     width: 100%;
@@ -36,6 +39,7 @@
 
  h2{
     text-align: center;
+    
  }
 
 
@@ -59,6 +63,13 @@
     height: fit-content;
     margin-left: 20px;
 }
+
+h3{
+    text-align: center;
+    font-style: italic;
+    font-size: 20px;
+}
+
 /*
 .initial-info #box-1{
     margin: -49px 18vw 9px;
@@ -126,11 +137,7 @@
     margin-bottom: -2px;
 }
 
-h3{
-    text-align: center;
-    font-style: italic;
-    font-size: 20px;
-}
+
 
 
 
@@ -214,6 +221,51 @@ h3{
     border-radius: 50%;
     box-shadow: 0 4px 12px black;
 }
+
+/*Formulario*/
+
+.formulario{
+    display: flex;
+    top: 100px;
+    margin-left: 30%;
+    width: 440px;
+    height: 20pc ;
+    background-color: rgb(207, 207, 255);
+    border-radius: 10px;
+   
+}
+.formulario form{
+    padding: 0 40px;
+    box-sizing: border-box;
+    font-family: var(--word-font);
+}
+form .name{
+    position: relative;
+    width: 340px;
+    border-bottom: 2px solid rgb(158, 158, 158);
+    margin: 35px 0;
+    color: rgb(0, 0, 0);
+}
+
+.name input{
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px ;
+    border: none;
+    background: none;
+    outline: none;
+}
+.name label{
+    position:absolute;
+    top: 50%;
+    left: 5px;
+    color: #000;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+}
+
 
 
 /*
