--- a/styles/pag3.css
+++ b/styles/pag3.css
@@ -77,5 +77,10 @@
     border-radius: 50%;
     box-shadow: 0 4px 12px black;
 }
-
+.btn-mail{
+    width: 7%;
+    margin-left: 18%;
+    border-radius: 50%;
+    box-shadow: 0 4px 12px black;
+}
  
