--- a/styles/pag1.css
+++ b/styles/pag1.css
@@ -8,6 +8,10 @@
     --btn-color: rgb(207, 206, 205);
 }
 
+a{
+    color: white;
+    text-decoration: none;
+}
 .principal-text-1{
     text-align: center;
     font-size: 22px;
