--- a/styles/pag3.css
+++ b/styles/pag3.css
@@ -7,7 +7,10 @@
     --text-color: black;
     --btn-color: rgb(207, 206, 205);
 }
-
+a{
+    color: white;
+    text-decoration: none;
+}
 .principal-text-3{
     text-align: center;
     font-size: 22px;
