--- a/styles/basic.css
+++ b/styles/basic.css
@@ -38,10 +38,11 @@ html{
     align-items: center;
 }*/
 .header-icon{
-    width: 200px;
+    width: 20px;
     display: flex;
     min-width: 80px;
     height: fit-content;
+    border-radius: 48%;
 }
 
 
