--- a/styles/pag3.css
+++ b/styles/pag3.css
@@ -8,7 +8,7 @@
     --btn-color: rgb(207, 206, 205);
 }
 a{
-    color: white;
+    color: rgb(49, 100, 141);
     text-decoration: none;
 }
 .principal-text-3{
