--- a/styles/basic.css
+++ b/styles/basic.css
@@ -17,7 +17,7 @@ html{
 
 /*general del header*/
 .header{
-    background: whitesmoke;
+    background: white;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.637);
     position: fixed;
     top: 0;
